# rest-server/src/main/kotlin/ed/unicoach/rest/models/GoogleLoginRequest.kt
@@ -1,0 +1,8 @@
+package ed.unicoach.rest.models
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class GoogleLoginRequest(
+  val idToken: String,
+)
